infrastructure/openshift/ci/web-Service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ci
  name: web-ci
spec:
  ports:
    - name: http
      port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    app: ci
    deploymentconfig: web-ci
  type: ClusterIP
