infrastructure/openshift/ci/web-Route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ci
  name: web-ci
spec:
  host:
    valueFrom:
    secretKeyRef:
      key: uri
      name: myskills-web-uri
  port:
    targetPort: http
  to:
    kind: Service
    name: web-ci
    weight: 100
  wildcardPolicy: None
  tls:
    valueFrom:
      secretKeyRef:
        key: jtech.se.crt
        name: tls
    termination: edge
